--- a/src/monitoring/static/dashboard.html
+++ b/src/monitoring/static/dashboard.html
@@ -431,9 +431,9 @@
                         <thead>
                             <tr>
                                 <th>WebSocket URL</th>
-                                <th>Active Connections</th>
-                                <th>Finished Connections</th>
-                                <th>Error Connections</th>
+                                <th>Active</th>
+                                <th>Finished</th>
+                                <th>Error</th>
                                 <th>Last Heartbeat</th>
                             </tr>
                         </thead>
@@ -454,9 +454,9 @@
                         <thead>
                             <tr>
                                 <th>WebSocket URL</th>
-                                <th>Total Completed</th>
-                                <th>Total Pending</th>
-                                <th>Avg Completion Time</th>
+                                <th>Completed</th>
+                                <th>Pending</th>
+                                <th>Latency</th>
                                 <th>Last Heartbeat</th>
                             </tr>
                         </thead>
